# autoReceipt

./: .gitignore  Dockerfile  FORMSPREE_SETUP.md  README.md  SMTP_SETUP_GUIDE.md  mypy.ini  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run.bat  run_web.bat  run_web.py  run_with_logs.py  start_server.sh
.github/workflows/: ci.yml  deploy.yml
src/survey_bot/: __init__.py  __main__.py  main.py
src/survey_bot/agents/: __init__.py  formspree_sender.py  fulfillment.py  ingestion.py  supervisor.py
src/survey_bot/browser/: __init__.py  interactor.py  launcher.py  observer.py
src/survey_bot/llm/: __init__.py  chains.py  graph.py  ollama_host.py  optimized_navigator.py  prompts.py  vision_navigator.py
src/survey_bot/models/: __init__.py  page_state.py  persona.py  receipt.py  survey_result.py
src/survey_bot/utils/: __init__.py  image_processing.py  qr_decoder.py
src/survey_bot/web/: __init__.py  app.py
src/survey_bot/web/templates/: index.html
tests/: __init__.py  conftest.py  mock_server.py  test_e2e.py  test_fulfillment.py  test_ingestion.py  test_navigator_integration.py  test_supervisor.py
