[project]
dependencies = [
    "pyzbar>=0.1.9",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=9.0.0",
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]


[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "qrcode[pil]>=7.0.0",
]

